--- a/templates/index.html
+++ b/templates/index.html
@@ -2,39 +2,40 @@
 <html>
 
 <head>
-  <link href="styles/style.css" rel="stylesheet" type="text/css">
+  <link href="static/css/style.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=ABeeZee" rel="stylesheet">
   <meta charset="utf-8">
   <meta name="author" content="Muhammed Bacalan">
   <meta name="description" content="GW2Bot is a powerful, Guild Wars 2 bot for Discord!">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="scripts/apicheck.js"></script>
+  <script>window.jQuery || document.write('<script src="static/js/lib/jquery-3.2.1.min.js"><\/script>');</script>
+  <script src="static/js/apicheck.js"></script>
   <title>GW2Bot - A Discord Bot</title>
 </head>
 
 <body>
   <header>
-    <img class="banner" alt="Banner with GW2Bot Logo" src="images/banner.png">
+    <img class="banner" alt="Banner with GW2Bot Logo" src="static/img/banner.png">
   </header>
   <nav>
     <ul>
-      <li><a class="active" href="index.html">Home</a></li>
-      <li><a href="commands.html">Commands</a></li>
-      <li><a href="faq.html">F.A.Q</a></li>
-      <li><a href="http://support.gw2bot.info" title="Join GW2Bot's Discord server">Support</a></li>
+      <li><a class="active" href="/">Home</a></li>
+      <li><a href="{{ url_for('commands') }}">Commands</a></li>
+      <li><a href="{{ url_for('faq') }}">F.A.Q</a></li>
+      <li><a href={{support_link}} title="Join GW2Bot's Discord server">Support</a></li>
     </ul>
   </nav>
   <span id="apistatus" title="If API is offline, the bot will not function properly">Checking API... ☐</span>
-  <img id="loader" src="images/loading.svg">
+  <img id="loader" src="static/img/loading.svg">
   <main class="home">
     <p>Bring the world of Tyria into your Discord server</p>
-    <img alt="A .gif demonstration of the bot" src="images/botdemo.gif">
+    <img alt="A .gif demonstration of the bot" src="static/img/botdemo.gif">
     <p class="invite">
-      <a href="https://discordapp.com/oauth2/authorize?client_id=310050883100737536&scope=bot&permissions=27648">Invite!</a>
+      <a href={{invite_link}}>Invite!</a>
     </p>
   </main>
   <footer>
-    <p>2017 - GW2Bot created by Maselko.8142, Website created by Penemue.6827&nbsp; &nbsp;-</p>
+    <p>©2017 - GW2Bot created by Maselko.8142, Website created by Penemue.6827&nbsp; &nbsp;-</p>
     <p>&nbsp; &nbsp; If you want to help with development, see <a href="https://github.com/Maselkov/GW2Bot">here for the bot </a>and
       <a href="https://github.com/pen-mb/gw2bot ">here for the website.</a> Thanks to all contributors and to Twentysix for
       <a href="https://github.com/Twentysix26/Red-DiscordBot">Red.</a></p>
