--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -206,13 +206,14 @@ footer {
     line-height: 1.8em;
     padding: 0;
   }
-  code {
-    font-family: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
-    font-size: 1.5rem;
-    padding: 2px;
-    background: #e3e3e3;
-    border-radius: 3px;
-  }
+}
+
+code {
+  font-family: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
+  //font-size: 1.5rem;
+  padding: 2px;
+  background: #e3e3e3;
+  border-radius: 3px;
 }
 
 @media (max-width: 320px) {
