Browser compatability, accessibility, SEO, and semantic improvements

--- a/src/assets/scss/base/_images.scss
+++ b/src/assets/scss/base/_images.scss
@@ -3,6 +3,7 @@ picture {
 }
 img {
   display: block;
+  border-style: none;// Remove the border on images inside links in IE 10.
   width: 100%;
   max-width: 100%;
 }
