--- a/src/assets/scss/components/_buttons.scss
+++ b/src/assets/scss/components/_buttons.scss
@@ -13,6 +13,21 @@
 /*---------------------------------------------------------------------------*\
     Buttons Global
 \*---------------------------------------------------------------------------*/
+button {// Taken from Normalise.css
+  margin: 0;
+  font-family: inherit;
+  font-size: 100%;
+  overflow: visible;
+  text-transform: none;
+  -webkit-appearance: button;
+  &::-moz-focus-inner {
+    border-style: none;
+    padding: 0;
+  }
+  &::-moz-focusring {
+    outline: 1px dotted ButtonText;
+  }
+}
 .button {
   position: relative;
   display: inline-block;
