--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -6,11 +6,12 @@
     Main
 \*---------------------------------------------------------------------------*/
 // 1. Ensure the page always fills at least the entire height of the viewport.
-
 // 2. Set the global `box-sizing` state to `border-box`.
+// 3. Prevent adjustments of font size after orientation changes in iOS.
 html {
   min-height: 100%; /* [1] */
   box-sizing: border-box; /* [2] */
+  -webkit-text-size-adjust: 100%; /* [3] */
 }
 *, *:before, *:after {
   box-sizing: inherit; /* [2] */
@@ -20,6 +21,9 @@ body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
+}
+main {
+  display: block;// Render the `main` element consistently in IE.
 }
 
 @import 'base/colors';
