--- a/src/assets/scss/components/_feature-section.scss
+++ b/src/assets/scss/components/_feature-section.scss
@@ -15,7 +15,8 @@
 .feature-image {
   position: relative;
   padding: ($baseline-px * 6) 0;
-  background: url("/static/img/feature-images/feature-image-1.jpg") no-repeat 50% 50%;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
   background-size: cover;
   &:before {
     @extend %psuedo-element;
@@ -24,15 +25,38 @@
     right: 0;
     bottom: 0;
     left: 0;
-    background: rgba($black,.25);
+    background: rgba($black,.2);
+  }
+  &.january, &.february {
+    background-image: url("/static/img/feature-images/lunar-new-year.jpg");
+  }
+  &.march, &.april, &.may {
+    background-image: url("/static/img/feature-images/spring.jpg");
+  }
+  &.june, &.july {
+    background-image: url("/static/img/feature-images/dragon-bash.jpg");
+  }
+  &.august, &.september {
+    background-image: url("/static/img/feature-images/festival-of-the-four-winds.jpg");
+  }
+  &.october {
+    background-image: url("/static/img/feature-images/halloween.jpg");
+  }
+  &.november {
+    background-image: url("/static/img/feature-images/autumn.jpg");
+  }
+  &.december {
+    background-image: url("/static/img/feature-images/christmas.jpg");
   }
 }
 .feature-title {
   color: $white;
   text-shadow: 0 1px 1px $black,
+               0 0 6px $black,
                0 0 12px $black,
                0 0 24px $black,
-               0 0 48px $black;
+               0 0 48px $black,
+               0 0 72px $black;
 }
 .feature-button {
   margin: 60px 0 0 0;
