--- a/src/assets/scss/pages/_commands.scss
+++ b/src/assets/scss/pages/_commands.scss
@@ -10,6 +10,7 @@
 .commands-list {
   padding: 0;
   list-style: none;
+  text-align: center;
 }
 .commands-list__item {
   padding: ($baseline-px * .5);
