--- a/src/assets/scss/components/_buttons.scss
+++ b/src/assets/scss/components/_buttons.scss
@@ -6,6 +6,7 @@ button {// Taken from Normalise.css
   margin: 0;
   font-family: inherit;
   font-size: 100%;
+  font-weight: inherit;
   color: inherit;
   overflow: visible;
   text-transform: none;
