Set default color value

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -15,6 +15,7 @@ html {
   -webkit-text-size-adjust: 100%; /* [3] */
   font-size: 100%;
   line-height: $p-line-rem;
+  color: #000;
 }
 *, *:before, *:after {
   box-sizing: inherit; /* [2] */
@@ -49,8 +50,8 @@ main {
 
 .patreon {
   padding-top: $baseline-rem;
-  .flexbox {
-    padding: $baseline-rem 0;
+  .flexbox__item {
+    margin-top: $baseline-rem;
   }
 }
 
