--- a/src/assets/scss/components/_hr.scss
+++ b/src/assets/scss/components/_hr.scss
@@ -6,5 +6,5 @@ hr {
   margin: ($baseline-px - 1px) 0 0 0;
   border: 0;
   height: 1px;
-  background: url("/static/img/hr.png") no-repeat 50% 0;
+  background: $grey-800;
 }
