--- a/src/assets/scss/_settings.scss
+++ b/src/assets/scss/_settings.scss
@@ -22,16 +22,19 @@ $h4-font-rem:       1.5625rem;      $h4-font-px:      25px;
 $h3-font-rem:       1.9375rem;      $h3-font-px:      31px;
 $h2-font-rem:       2.4375rem;      $h2-font-px:      39px;
 $h1-font-rem:       3.0625rem;      $h1-font-px:      49px;
+$xl-font-rem:       3.8125rem;      $xl-font-px:      61px;
 $small-font-rem:    0.875rem;       $small-font-px:   14px;
 $x-small-font-rem:  0.8125rem;      $x-small-font-px: 13px;
 
 //  Line Heights
 $p-line-rem:        $baseline-rem;  $p-line-px:       $baseline-px;
-$h5-line-rem:       1.8125rem;      $h5-line-px:      29px;
-$h4-line-rem:       2.1875rem;      $h4-line-px:      35px;
-$h3-line-rem:       2.5625rem;      $h3-line-px:      41px;
-$h2-line-rem:       3.125rem;       $h2-line-px:      50px;
-$h1-line-rem:       3.75rem;        $h1-line-px:      60px;
+$h5-line-rem:       1.875rem;       $h5-line-px:      30px;
+$h4-line-rem:       2.375rem;       $h4-line-px:      38px;
+$h3-line-rem:       2.9375rem;      $h3-line-px:      47px;
+$h2-line-rem:       3.6875rem;      $h2-line-px:      59px;
+$h1-line-rem:       4.5625rem;      $h1-line-px:      73px;
+$xl-line-rem:       5.6875rem;      $xl-line-px:      91px;
+$small-line-rem:    1.25rem;        $small-line-px:   20px;
 
 //  Margins
 $p-margin-rem:      ($baseline-rem * 2) - $p-line-rem;
@@ -55,11 +58,13 @@ $h1-margin-px:      ($baseline-px * 4) - $h1-line-px;
 /*---------------------------------------------------------------------------*\
     Component Sizes
 \*---------------------------------------------------------------------------*/
-$header-height:       301px;
+$header-height:       312px;
 //$header-logo-height:  $header-height - ($full-px * 2);        // 96px
 
-$nav-height:          60px;
+$nav-height:          84px;
 $nav-item-padding:    ($nav-height - $baseline-px) * .5;
+$nav-logo-height:     60px;
+$nav-logo-padding:    ($nav-height - $nav-logo-height) *.5;
 
 $page-width:          980px;
 
@@ -74,3 +79,33 @@ $breakpoints: (
   'lt-desktop' '(max-width: 1044px',
   'gt-desktop' '(min-width: 1045px)'
 );
+
+/*---------------------------------------------------------------------------*\
+    Material Shadows
+\*---------------------------------------------------------------------------*/
+$top-bar-shadow:
+  0 (-7px) 4px 10px rgba($black,.06),
+  0 (-6px) 6px 10px rgba($black,.12),
+  0 (-5px) 10px 10px rgba($black,.24)
+;
+
+$navigation-drawer-shadow:
+  5px 0 4px 8px rgba($black,.06),
+  4px 0 6px 8px rgba($black,.12),
+  4px 0 8px 8px rgba($black,.24)
+;
+
+$tooltip-shadow:
+  0 2px 4px (-1px) rgba($black,.24),
+  0 1px 6px 1px rgba($black,.12),
+  0 1px 8px 2px rgba($black,.06)
+;
+
+$button-shadow:
+  0 2px 3px (-1px) rgba($black,.24),
+  0 1px 3px rgba($black,.12),
+  0 1px 4px rgba($black,.06)
+;
+
+$card-shadow: $button-shadow;
+
