Added 'align-content: flex-start' to flexbox container style

--- a/src/assets/scss/components/_flexbox.scss
+++ b/src/assets/scss/components/_flexbox.scss
@@ -4,6 +4,7 @@
 .flexbox {
   display: flex;
   justify-content: center;
+  align-content: flex-start;
   flex-flow: row wrap;
   margin-left: (-$gutter-px);
 }
