Updated bot demo styles & removed stylised border (on home page) Will soon replace GIF with youtube video & fallback to GIF

--- a/src/assets/scss/pages/_index.scss
+++ b/src/assets/scss/pages/_index.scss
@@ -1,14 +1,15 @@
 /*---------------------------------------------------------------------------*\
     Index Page (Homepage)
 \*---------------------------------------------------------------------------*/
-#index {
-  .bot-demo {
-    position: relative;
-    margin: $baseline-rem 0;
-  }
-  .bot-demo-border {
-    position: absolute;
-    top: 0;
-    left: 0;
+.bot-demo {
+  position: relative;
+  margin: $baseline-rem 0;
+  img {
+    border-radius: 6px;
   }
 }
+/*.bot-demo-border {
+  position: absolute;
+  top: 0;
+  left: 0;
+}*/
