--- a/src/assets/scss/base/_images.scss
+++ b/src/assets/scss/base/_images.scss
@@ -7,6 +7,13 @@ img {
   width: 100%;
   max-width: 100%;
 }
+.lazyload, .lazyloading {
+  filter: blur(5px);
+}
+.lazyloaded {
+  filter: none;
+  transition: filter .2s ease-in;
+}
 /*svg {
   display: block;
 }*/
