--- a/src/assets/scss/base/_typography.scss
+++ b/src/assets/scss/base/_typography.scss
@@ -4,6 +4,7 @@
 a {
   // Remove the gray background on active links in IE 10.
   background-color: transparent;
+  color: $red-400;
   text-decoration: underline;
   &:hover {
     text-decoration: none;
@@ -16,7 +17,7 @@ a {
 code {
   @extend %code-font-family;
   padding: 1px 3px;
-  background: $grey-beam;
+  background: $grey-800;
   border-radius: 3px;
   font-size: 80%;
 }
@@ -29,44 +30,39 @@ code {
 h1, h2, .h2, h3, .h3/*, h4, h5, h6*/ {
   position: relative;
   display: block;
+  font-weight: 700;
 }
 h1 {
   @extend %header-font-family;
   margin: 0;
   font-size: $h1-font-rem;
   line-height: $h1-line-rem;
-  font-weight: 700;
 }
 h2, .h2 {
   @extend %header-font-family;
   margin: $h2-margin-rem 0 0 0;
   font-size: $h2-font-rem;
   line-height: $h2-line-rem;
-  font-weight: 700;
 }
 h3, .h3 {
   margin: $h3-margin-rem 0 0 0;
   font-size: $h3-font-rem;
   line-height: $h3-line-rem;
-  font-weight: 700;
 }
 /*h4 {
   margin: $h4-margin-rem 0 0 0;
   font-size: $h4-font-rem;
   line-height: $h4-line-rem;
-  font-weight: 400;
 }
 h5 {
   margin: $h5-margin-rem 0 0 0;
   font-size: $h5-font-rem;
   line-height: $h5-line-rem;
-  font-weight: 700;
 }
 h6 {
   margin: $p-margin-rem 0 0 0;
   font-size: $p-font-rem;
   line-height: $p-line-rem;
-  font-weight: 400;
 }*/
 p, .paragraph, li/*, figcaption, dl*/ {
   @extend %body-font-family;
@@ -76,6 +72,7 @@ p, .paragraph, li/*, figcaption, dl*/ {
 }
 small, .small-text {
   font-size: $small-font-rem;
+  line-height: $small-line-rem;
   vertical-align: top;
 }
 .smaller {
