--- a/src/assets/scss/components/_navigation.scss
+++ b/src/assets/scss/components/_navigation.scss
@@ -1,65 +1,256 @@
 /*---------------------------------------------------------------------------*\
-    Navigation
+    Top Bar
 \*---------------------------------------------------------------------------*/
-nav {
-  position: relative;// Fallback for IE
-  position: sticky;
+.top-bar {
+  position: fixed;
   top: 0;
-  margin: 0;
+  left: 0;
+  width: 100%;
   height: $nav-height;
-  text-align: center;
+  text-align: left;
+  z-index: 2;
+}
+.top-bar__shadow {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   background: $white;
-  flex-wrap: nowrap;
-  z-index: 1;
-  .flexbox__item {
-    padding: 0;
-  }
-  a {
-    position: relative;
+  box-shadow: $top-bar-shadow;
+  z-index: 3;
+}
+
+.top-bar__logo {
+  display: inline-block;
+  margin: $nav-logo-padding 0;
+  height: $nav-logo-height;
+  white-space: nowrap;
+  text-decoration: none;
+  vertical-align: top;
+  img {
     display: inline-block;
-    font-size: $nav-font-rem;
-    line-height: $baseline-px;
-    font-weight: 700;
-    text-decoration: none;
-    color: $grey-dark;
-    padding: $nav-item-padding ($baseline-px * .5);
-    &:hover {
-      color: $red-deep;
-    }
-    &.active {
-      color: $black;
-      &:after {
-        @extend %psuedo-element;
-        position: absolute;
-        top: 100%;
-        left: 50%;
-        margin-left: (-12px);
-        width: 0;
-        height: 0;
-        border: 0 solid transparent;
-        border-top: 8px solid $white;
-        border-right-width: 12px;
-        border-left-width: 12px;
-        z-index: 1;
-      }
+    width: auto;
+    height: $nav-logo-height;
+    vertical-align: top;
+  }
+}
+.top-bar__logo-wordmark {
+  @extend %header-font-family;
+  position: relative;
+  display: inline-block;
+  margin-left: ($baseline-px * .25);
+  font-size: $h3-font-px;
+  line-height: $nav-logo-height;
+  font-weight: 700;
+  color: $red-500;
+  @include text-stroke($black,.5);
+  @supports (background-clip: text) or (-webkit-background-clip: text) {
+    &:after {
+      content: 'GW2Bot';
+      pointer-events: none;
+      position: absolute;
+      top: 0;
+      left: 0;
+      background: linear-gradient($red-700 32.5%,$red-500 51.6%,$red-100 70.8%);
+      background-clip: text;
+      color: transparent;
+      text-shadow: none;
     }
   }
-  &:before {
-    @extend %psuedo-element;
+}
+
+/*---------------------------------------------------------------------------*\
+    Main Navigation
+\*---------------------------------------------------------------------------*/
+.main-nav-button {
+  position: absolute;
+  top: $nav-logo-padding;
+  right: ($gutter-px * .5);
+  width: $nav-logo-height;
+  height: $nav-logo-height;
+  border: none;
+  //border: 1px solid $grey-700;
+  border-radius: 50%;
+  background: $white;
+  color: $grey-100;
+  //box-shadow: $button-shadow;
+  &:hover {
+    color: $red-500;
+  }
+  &:active {
+    background: $grey-900;
+  }
+  div {
     position: absolute;
-    right: 0;
-    bottom: 100%;
-    left: 0;
-    height: 1px;
-    background: url("/static/img/nav-top.jpg") no-repeat 50% 0%;
+    top: 50%;
+    left: 50%;
+    margin: (-2px) 0 0 (-14px);
+    border-radius: 2px;
+    width: 28px;
+    height: 4px;
+    background: currentColor;
+    transition: transform .15s ease-in;
+    &:before, &:after {
+      @extend %psuedo-element;
+      position: absolute;
+      left: 0;
+      border-radius: 2px;
+      width: 28px;
+      height: 4px;
+      background: currentColor;
+      transition: transform .15s ease-in, top .15s ease-out .15s, bottom .15s ease-out .15s;
+    }
+    &:before {
+      bottom: 8px;
+    }
+    &:after {
+      top: 8px;
+    }
   }
+  &.active div {
+    transform: rotate(45deg);
+    transition: transform .15s ease-out .15s;
+    &:before, &:after {
+      transition: top .15s ease-in, bottom .15s ease-in, transform .15s ease-out .15s;
+    }
+    &:before {
+      bottom: 0;
+      //transform: rotate(45deg);
+    }
+    &:after {
+      top: 0;
+      transform: rotate(-90deg);
+    }
+  }
+  @include media-query('gt-mobile') {
+    right: $gutter-px;
+  }
+  @include media-query('gt-tablet') {
+    display: none;
+  }
+}
+.main-nav__container {
+  position: fixed;
+  top: $nav-height;
+  left: calc(100% + 200px);
+  width: 200px;
+  height: 100%;
+  background: $white;
+  text-align: left;
+  box-shadow: none;
+  transition: left .3s ease-in, box-shadow 0s linear .3s;
+  z-index: 2;
+  &.active {
+    left: calc(100% - 200px);
+    box-shadow: $navigation-drawer-shadow;
+    transition: left .3s ease-out;
+  }
+  @include media-query('gt-tablet') {
+    position: absolute;
+    top: 0;
+    right: $gutter-px;
+    left: auto;
+    width: auto;
+    height: $nav-height;
+    float: right;
+    z-index: 3;
+    transition: none;
+    &.active {
+      left: auto;
+      box-shadow: none;
+    }
+  }
+}
+.main-nav {
+  display: flex;
+  margin: 0;
+  flex-flow: column nowrap;
+  justify-content: flex-start;
+  &:hover .main-nav__link {
+    opacity: .6;
+  }
+  @include media-query('gt-tablet') {
+    flex-flow: row nowrap;
+  }
+}
+.main-nav__link {
+  display: inline-block;
+  padding: 0 ($baseline-px * .5);
+  width: 100%;
+  height: $nav-height;
+  color: $grey-300;
+  text-decoration: none;
+  transition: opacity .15s;
+  &:hover {
+    color: $red-500;
+    background: $white;
+    opacity: 1 !important;
+    .main-nav__link-name:after {
+      width: 100%;
+    }
+  }
+  &.active {
+    color: $grey-100;
+    .main-nav__link-name:after {
+      width: 100%;
+    }
+  }
+  @include media-query('gt-tablet') {
+    width: auto;
+    &:hover .main-nav__link-name:after,
+    &.active .main-nav__link-name:after {
+      height: 4px;
+    }
+  }
+}
+.main-nav__link-name {
+  position: relative;
+  display: inline-block;
+  font-size: $nav-font-rem;
+  line-height: $nav-height;
+  font-weight: 700;
+  vertical-align: top;
   &:after {
     @extend %psuedo-element;
     position: absolute;
-    top: 100%;
-    right: 0;
+    bottom: 0;
     left: 0;
-    height: 48px;
-    background: url("/static/img/nav-shadow.png") no-repeat 50% 0%;
+    width: 0;
+    height: 4px;
+    background: currentColor;
+    transition: width .15s;
+  }
+  @include media-query('gt-tablet') {
+    &:after {
+      bottom: 1px;
+      width: 100%;
+      height: 0;
+      transition: height .15s;
+    }
+  }
+}
+.q-kern {
+  letter-spacing: -2px;
+}
+
+.mobile-navigation-cover {
+  position: fixed;
+  top: $nav-height;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: $black;
+  //z-index: 1;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity .3s ease-in, visibility 0s linear .3s;
+  &.active {
+    opacity: .5;
+    visibility: visible;
+    transition: opacity .3s ease-out;
+  }
+  @include media-query('gt-tablet') {
+    display: none;
   }
 }
