--- a/src/assets/scss/pages/_commands.scss
+++ b/src/assets/scss/pages/_commands.scss
@@ -12,69 +12,173 @@
   list-style: none;
   text-align: center;
 }
-.commands-list__item {
+
+.command {
+  position: relative;
   padding: ($baseline-px * .5);
-  background: $white-grey;
-  box-shadow: 0 1px 2px rgba($black,.2),
-              0 2px 4px rgba($black,.1),
-              0 4px 8px rgba($black,.05);
-  hr {
-    margin: (($baseline-px * .5) - 1px) 0 ($baseline-px * .5) 0;
-  }
-  & ~ .commands-list__item {
+  border: 1px solid $grey-800;
+  border-radius: 6px;
+  background: $white;
+  box-shadow: $card-shadow;
+  & ~ .command {
     margin-top: $baseline-rem;
   }
-}
-
-.command-name {
-  @extend %code-font-family;
-  margin: 0;
-  color: $grey-dark;
-  font-size: $h4-font-rem;
-  line-height: ($baseline-px * 2);
-  font-weight: 400;
+  p {
+    margin: 0;
+  }
   button {
     display: inline-block;
-    margin: 4px 0;
-    border: 1px solid $grey-dark;
-    border-radius: 2px;
-    padding: 1px 6px;
+    border: 1px solid $grey-700;
     background: $white;
-    line-height: ($baseline-px * 2) - 12px;
-    text-decoration: none;
     vertical-align: top;
     &:hover {
-      background: $grey-dark;
-      color: $white;
+      background: $grey-900;
     }
     &:active {
-      background: $black;
-      padding: 2px 6px 0 6px;
+      background: $grey-800;
     }
     &.active {
-      background: $grey-dark;
-      color: $white;
+      color: $grey-900;
+      background: $grey-100;
       &:active {
         background: $black;
       }
     }
   }
-  span:before {
-    content: '\002F';// Forward slash
-    color: $grey-light;
+  .tooltip {
+    right: (-6px);
+    left: (-6px);
   }
 }
-.command-desc {
+.command__name {
+  @extend %code-font-family;
+  margin: 0;
+  color: $grey-100;
+  font-size: $h4-font-rem;
+  line-height: ($baseline-px * 2);
+  font-weight: 400;
+  white-space: nowrap;
+  letter-spacing: -0.8px;
+  button {
+    margin: 4px 0;
+    line-height: ($baseline-px * 2) - 12px;
+  }
+  span:before {
+    content: '\002F';// Forward slash
+    color: $grey-500;
+  }
+}
+.command__desc {
   margin: 2px 0 10px 0;
   line-height: $baseline-px;
 }
-.command-argument {
-  p, &, & ~ .command-argument {
-    margin: 0;
+.command-button {
+  border-radius: 20px;
+  padding: 1px 14px;
+  &:active {
+    padding: 2px 14px 0 14px;
+  }
+  &:after {
+    @extend %psuedo-element;
+    display: inline-block;
+    width: ($baseline-px * 2) - 12px;
+    height: ($baseline-px * 2) - 12px;
+    background: url-encode("<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 500 500' fill='#{$grey-500}'><circle cx='200' cy='300' r='30'/><circle cx='325' cy='300' r='30'/><circle cx='450' cy='300' r='30'/></svg>") 50% 50%/100% 100%;
+    vertical-align: top;
   }
 }
-.command-argument-name {
+
+.subcommand-list {
+  margin: 12px 0 (-12px) 0;
+  padding: 0;
+  list-style: none;
+  text-align: center;
+}
+.subcommand {
+  position: relative;
+  margin: 12px 0 0 0;
+  padding: 12px 0;
+  border-top: 1px solid $grey-700;
+  & ~ .subcommand {
+    margin: 0;
+  }
+  .tooltip {
+    right: (-18px);
+    left: (-18px);
+  }
+}
+.subcommand__name {
   @extend %code-font-family;
-  color: $grey-dark;
+  color: $grey-200;
+  line-height: $baseline-px;
   font-weight: 700;
+  white-space: nowrap;
+  letter-spacing: -0.3px;
+  button {
+    line-height: $baseline-px - 4px;
+  }
+  span {
+    color: $grey-600;
+    &:before {
+      content: '\002F';// Forward slash
+    }
+  }
+}
+
+.args-button {
+  border-radius: 8px;
+  padding: 1px 6px;
+  &:active {
+    padding: 2px 6px 0 6px;
+  }
+}
+.arg-list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  text-align: center;
+}
+.arg {
+  margin: 0;
+  padding: 12px 0;
+  & ~ .arg {
+    border-top: 1px solid $grey-700;
+  }
+}
+.arg__name {
+  @extend %code-font-family;
+  color: $grey-200;
+  line-height: $baseline-px;
+  font-weight: 700;
+  white-space: nowrap;
+  letter-spacing: -0.3px;
+  span {
+    color: $grey-600;
+    font-weight: 400;
+  }
+}
+
+.option-list {
+  display: inline-block;
+  padding: 0;
+  margin: 6px 0 0 0;
+  border: 1px solid $grey-800;
+  border-radius: 8px;
+  list-style: none;
+}
+.option {
+  position: relative;
+  margin: 0;
+  padding: 6px 12px 6px 20px;
+  &:before {
+    @extend %psuedo-element;
+    position: absolute;
+    left: 8px;
+    top: 14px;
+    border: 2px solid currentColor;
+    border-radius: 50%;
+  }
+  & ~ .option {
+    border-top: 1px solid $grey-800;
+  }
 }
