--- a/src/assets/scss/components/_tooltips.scss
+++ b/src/assets/scss/components/_tooltips.scss
@@ -5,7 +5,7 @@
   position: absolute;
   bottom: calc(100% - 2px);
   padding: 6px 12px;
-  border: 1px solid $grey-700;
+  //border-top: 1px solid $grey-700;
   border-radius: 12px;
   background: $white;
   box-shadow: $tooltip-shadow;
