--- a/src/assets/scss/pages/_commands.scss
+++ b/src/assets/scss/pages/_commands.scss
@@ -16,7 +16,7 @@
 .command {
   position: relative;
   padding: ($baseline-px * .5);
-  border: 1px solid $grey-800;
+  //border: 1px solid $grey-700;
   border-radius: 6px;
   background: $white;
   box-shadow: $card-shadow;
