--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -17,7 +17,7 @@ html {
   font-size: 100%;
   line-height: $p-line-rem;
   color: $grey-100;
-  background: $white;
+  background: $grey-900;
 }
 *, *:before, *:after {
   box-sizing: inherit; /* [2] */
