Add border-radius to bot demo video on homepage

--- a/src/assets/scss/pages/_index.scss
+++ b/src/assets/scss/pages/_index.scss
@@ -4,8 +4,8 @@
 .bot-demo {
   position: relative;
   margin: $baseline-rem 0;
-  img {
-    border-radius: 6px;
+  video {
+    border-radius: 8px;
   }
 }
 /*.bot-demo-border {
