Dark mode styles

--- a/src/assets/scss/_colors.scss
+++ b/src/assets/scss/_colors.scss
@@ -2,7 +2,9 @@
     Colours
 \*---------------------------------------------------------------------------*/
 $black: #000;
+$grey-50: #161616;
 $grey-100: #212121;
+$grey-150: #2B2B2B;
 $grey-200: #424242;
 $grey-300: #616161;
 $grey-400: #757575;
@@ -22,13 +24,13 @@ $red-600: #C31A01;
 $red-700: #D21A03;
 $red-800: #E31D06;
 $red-900: #F01F07;
+$red-1000:#FD7367;
+$red-1100:#FCAF9A;
+$red-1200:#FFC8AD;
 
 /*$red-dark: #3e1209;
 $red-deep: #b40000;
-$red-medium: #d72d1c;
-$red-light: #fd7367;
-$red-highlight: #fcaf9a;
-$red-beam: #ffc8ad;*/
+$red-medium: #d72d1c;*/
 
 $patreon-fiery-coral: #ff424d;// Patreon official "fiery coral" color
 
