--- a/src/assets/scss/base/_images.scss
+++ b/src/assets/scss/base/_images.scss
@@ -1,6 +1,9 @@
 picture {
   display: block;
 }
+video {
+  width: 100%;
+}
 img {
   display: block;
   border-style: none;// Remove the border on images inside links in IE 10.
