--- a/src/assets/scss/components/_buttons.scss
+++ b/src/assets/scss/components/_buttons.scss
@@ -35,19 +35,19 @@ button {// Taken from Normalise.css
   font-weight: 700;
   text-align: center;
   white-space: nowrap;
-  color: $white;
+  &, .dark-mode & {color: $white;}
   cursor: pointer;
   font-size: $p-font-rem;
   line-height: $p-line-px;
   outline: 0;
   &:hover {
     background: $red-700;
-    color: $white;
+    //color: $white;
   }
   &:active {
     padding: 7px 18px 5px 18px;
     background: $red-100;
-    color: $grey-900;
+    &, .dark-mode & {color: $grey-900;}
   }
   img, &:before {
     display: inline-block;
