--- a/src/assets/scss/components/_navigation.scss
+++ b/src/assets/scss/components/_navigation.scss
@@ -1,135 +1,8 @@
-/*---------------------------------------------------------------------------*\
-    Top Bar
-\*---------------------------------------------------------------------------*/
-.top-bar {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: $nav-height;
-  text-align: left;
-  z-index: 2;
-}
-.top-bar__shadow {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: $white;
-  box-shadow: $top-bar-shadow;
-  z-index: 3;
-}
-
-.top-bar__logo {
-  display: inline-block;
-  margin: $nav-logo-padding 0;
-  height: $nav-logo-height;
-  white-space: nowrap;
-  text-decoration: none;
-  vertical-align: top;
-  img {
-    display: inline-block;
-    width: auto;
-    height: $nav-logo-height;
-    vertical-align: top;
-  }
-}
-.top-bar__logo-wordmark {
-  @extend %header-font-family;
-  position: relative;
-  display: inline-block;
-  margin-left: ($baseline-px * .25);
-  font-size: $h3-font-px;
-  line-height: $nav-logo-height;
-  font-weight: 700;
-  color: $red-500;
-  @include text-stroke($black,.5);
-  @supports (background-clip: text) or (-webkit-background-clip: text) {
-    &:after {
-      content: 'GW2Bot';
-      pointer-events: none;
-      position: absolute;
-      top: 0;
-      left: 0;
-      background: linear-gradient($red-700 32.5%,$red-500 51.6%,$red-100 70.8%);
-      background-clip: text;
-      color: transparent;
-      text-shadow: none;
-    }
-  }
-}
-
+@use 'sass:color';
 /*---------------------------------------------------------------------------*\
     Main Navigation
 \*---------------------------------------------------------------------------*/
-.main-nav-button {
-  position: absolute;
-  top: $nav-logo-padding;
-  right: ($gutter-px * .5);
-  width: $nav-logo-height;
-  height: $nav-logo-height;
-  border: none;
-  //border: 1px solid $grey-700;
-  border-radius: 50%;
-  background: $white;
-  color: $grey-100;
-  //box-shadow: $button-shadow;
-  &:hover {
-    color: $red-500;
-  }
-  &:active {
-    background: $grey-900;
-  }
-  div {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin: (-2px) 0 0 (-14px);
-    border-radius: 2px;
-    width: 28px;
-    height: 4px;
-    background: currentColor;
-    transition: transform .15s ease-in;
-    &:before, &:after {
-      @extend %psuedo-element;
-      position: absolute;
-      left: 0;
-      border-radius: 2px;
-      width: 28px;
-      height: 4px;
-      background: currentColor;
-      transition: transform .15s ease-in, top .15s ease-out .15s, bottom .15s ease-out .15s;
-    }
-    &:before {
-      bottom: 8px;
-    }
-    &:after {
-      top: 8px;
-    }
-  }
-  &.active div {
-    transform: rotate(45deg);
-    transition: transform .15s ease-out .15s;
-    &:before, &:after {
-      transition: top .15s ease-in, bottom .15s ease-in, transform .15s ease-out .15s;
-    }
-    &:before {
-      bottom: 0;
-      //transform: rotate(45deg);
-    }
-    &:after {
-      top: 0;
-      transform: rotate(-90deg);
-    }
-  }
-  @include media-query('gt-mobile') {
-    right: $gutter-px;
-  }
-  @include media-query('gt-tablet') {
-    display: none;
-  }
-}
+// '.main-nav-button' in '_top-bar.scss' partial
 .main-nav__container {
   position: fixed;
   top: $nav-height;
@@ -149,7 +22,7 @@
   @include media-query('gt-tablet') {
     position: absolute;
     top: 0;
-    right: $gutter-px;
+    right: $nav-logo-height + ($gutter-px * 2);
     left: auto;
     width: auto;
     height: $nav-height;
@@ -161,6 +34,15 @@
       box-shadow: none;
     }
   }
+  .dark-mode & {
+    background: $grey-100;
+    &.active {
+      box-shadow: $navigation-drawer-shadow--dark;
+      @include media-query('gt-tablet') {
+        box-shadow: none;
+      }
+    }
+  }
 }
 .main-nav {
   display: flex;
@@ -168,7 +50,7 @@
   flex-flow: column nowrap;
   justify-content: flex-start;
   &:hover .main-nav__link {
-    opacity: .6;
+    opacity: .75;
   }
   @include media-query('gt-tablet') {
     flex-flow: row nowrap;
@@ -183,8 +65,7 @@
   text-decoration: none;
   transition: opacity .15s;
   &:hover {
-    color: $red-500;
-    background: $white;
+    color: $red-700;
     opacity: 1 !important;
     .main-nav__link-name:after {
       width: 100%;
@@ -201,6 +82,15 @@
     &:hover .main-nav__link-name:after,
     &.active .main-nav__link-name:after {
       height: 4px;
+    }
+  }
+  .dark-mode & {
+    color: $grey-700;
+    &:hover {
+      color: color.scale($red-900, $saturation: 100%, $lightness: 15%);
+    }
+    &.active {
+      color: $white;
     }
   }
 }
