--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -17,7 +17,11 @@ html {
   font-size: 100%;
   line-height: $p-line-rem;
   color: $grey-100;
-  background: $grey-900;
+  background: $white;
+  &.dark-mode {
+    color: $white;
+    background: $black;
+  }
 }
 *, *:before, *:after {
   box-sizing: inherit; /* [2] */
@@ -28,6 +32,10 @@ body {
   padding: 0;
   text-align: center;
   overflow-x: hidden;
+  background: $grey-900;
+  .dark-mode & {
+    background: $grey-150;
+  }
 }
 main {
   display: block;// Render the `main` element consistently in IE.
@@ -40,6 +48,7 @@ main {
 @import 'components/buttons';
 @import 'components/header';
 //@import 'components/api-check';// Masel says API check is redundant now.
+@import 'components/top-bar';
 @import 'components/navigation';
 @import 'components/feature-section';
 @import 'components/vertical-align';
