--- a/src/assets/scss/pages/_commands.scss
+++ b/src/assets/scss/pages/_commands.scss
@@ -49,11 +49,31 @@
     right: (-6px);
     left: (-6px);
   }
+  .dark-mode & {
+    background: $grey-100;
+    box-shadow: $card-shadow--dark;
+    button {
+      border-color: $grey-300;
+      background: $grey-100;
+      &:hover {
+        background: $grey-150;
+      }
+      &:active {
+        background: $grey-50;
+      }
+      &.active {
+        color: $grey-100;
+        background: $white;
+        &:active {
+          background: $grey-900;
+        }
+      }
+    }
+  }
 }
 .command__name {
   @extend %code-font-family;
   margin: 0;
-  color: $grey-100;
   font-size: $h4-font-rem;
   line-height: ($baseline-px * 2);
   font-weight: 400;
@@ -106,10 +126,12 @@
     right: (-18px);
     left: (-18px);
   }
+  .dark-mode & {
+    border-top-color: $grey-300;
+  }
 }
 .subcommand__name {
   @extend %code-font-family;
-  color: $grey-200;
   line-height: $baseline-px;
   font-weight: 700;
   white-space: nowrap;
@@ -144,16 +166,18 @@
   & ~ .arg {
     border-top: 1px solid $grey-700;
   }
+  .dark-mode & {
+    border-top-color: $grey-300;
+  }
 }
 .arg__name {
   @extend %code-font-family;
-  color: $grey-200;
   line-height: $baseline-px;
   font-weight: 700;
   white-space: nowrap;
   letter-spacing: -0.3px;
   span {
-    color: $grey-600;
+    color: $grey-500;
     font-weight: 400;
   }
 }
@@ -165,6 +189,9 @@
   border: 1px solid $grey-800;
   border-radius: 8px;
   list-style: none;
+  .dark-mode & {
+    border-color: $grey-300;
+  }
 }
 .option {
   position: relative;
@@ -180,5 +207,8 @@
   }
   & ~ .option {
     border-top: 1px solid $grey-800;
+  }
+  .dark-mode & {
+    border-top-color: $grey-200;
   }
 }
