Cosmetic improvement to feature image + fix for lazysizes in IE (weakmaps not supported - loadscript plugin)

--- a/src/assets/scss/components/_feature-section.scss
+++ b/src/assets/scss/components/_feature-section.scss
@@ -4,7 +4,7 @@
 .feature-media {
   position: relative;
   padding: 0 0 46% 0;
-  min-height: 600px;
+  min-height: 540px;
   overflow: hidden;
   &.january,&.february {background: #847270}
   &.march,&.april {background: #9b9795}
@@ -14,7 +14,7 @@
   &.october {background: #513927}
   &.november {background: #65493c}
   &.december {background: #878175}
-  @include media-query('gt-desktop') {
+  @include media-query('gt-tablet') {
     min-height: 720px;
   }
 }
