Added permissions information to commands. Added subtle shadow to buttons on commands page to pronounce them more.

--- a/src/assets/scss/_settings.scss
+++ b/src/assets/scss/_settings.scss
@@ -121,6 +121,11 @@ $button-shadow:
   0 1px 4px rgba($black,.12),
   0 0 5px rgba($black,.06)
 ;
+$button-shadow--light:
+  0 1px 3px rgba($black,.12),
+  0 1px 4px rgba($black,.06),
+  0 0 5px rgba($black,.03)
+;
 
 $card-shadow:
   0 1px 3px (-1px) rgba($black,.24),
