--- a/src/assets/scss/components/_feature-section.scss
+++ b/src/assets/scss/components/_feature-section.scss
@@ -5,12 +5,16 @@
   position: relative;
   //padding: 0 0 46% 0;
   //min-height: 540px;
-  height: 100vh;
+  height: 100vh;// fallback
+  height: calc(100vh - $nav-height);
+  min-height: 480px;
   overflow: hidden;
   &.january,&.february {background: #847270}
-  &.march,&.april {background: #9b9795}
-  &.may {background: #727665}
-  &.june,&.july {background: #685b50}
+  &.march {background: #9b9795}
+  &.april {background: #727665}
+  &.may {background: #967d5c}
+  &.june {background: #685b50}
+  &.july {background: #7f6857}
   &.august,&.september {background: #928167}
   &.october {background: #513927}
   &.november {background: #65493c}
