Improved dark mode styles

--- a/src/assets/scss/_colors.scss
+++ b/src/assets/scss/_colors.scss
@@ -2,17 +2,21 @@
     Colours
 \*---------------------------------------------------------------------------*/
 $black: #000;
-$grey-50: #161616;
-$grey-100: #212121;
-$grey-150: #2B2B2B;
-$grey-200: #424242;
-$grey-300: #616161;
-$grey-400: #757575;
-$grey-500: #808080;
-$grey-600: #9E9E9E;
-$grey-700: #BDBDBD;
-$grey-800: #E0E0E0;
-$grey-900: #F5F5F5;
+$grey-100: #161616;
+$grey-200: #212121;
+$grey-250: #2B2B2B;
+$grey-300: #343434;
+$grey-350: #3A3A3A;
+$grey-400: #424242;
+$grey-500: #505050;
+$grey-600: #616161;
+$grey-700: #757575;
+$grey-800: #808080;// gray
+$grey-900: #9E9E9E;
+$grey-1000:#BDBDBD;
+$grey-1100:#E0E0E0;
+$grey-1150:#F1F1F1;
+$grey-1200:#F5F5F5;
 $white: #fff;
 
 $red-100: #8F1404;
