--- a/src/assets/scss/_settings.scss
+++ b/src/assets/scss/_settings.scss
@@ -84,56 +84,56 @@ $breakpoints: (
     Material Shadows
 \*---------------------------------------------------------------------------*/
 $top-bar-shadow:
+  0 (-7px) 4px 10px rgba($black,.04),
+  0 (-6px) 6px 10px rgba($black,.08),
+  0 (-5px) 10px 10px rgba($black,.16)
+;
+$top-bar-shadow--dark:
   0 (-7px) 4px 10px rgba($black,.06),
   0 (-6px) 6px 10px rgba($black,.12),
   0 (-5px) 10px 10px rgba($black,.24)
 ;
-$top-bar-shadow--dark:
-  0 (-7px) 4px 10px rgba($black,.12),
-  0 (-6px) 6px 10px rgba($black,.24),
-  0 (-5px) 10px 10px rgba($black,.48)
-;
 
 $navigation-drawer-shadow:
+  6px 0 4px 8px rgba($black,.04),
+  5px 0 6px 8px rgba($black,.08),
+  4px 0 8px 8px rgba($black,.16)
+;
+$navigation-drawer-shadow--dark:
   6px 0 4px 8px rgba($black,.06),
   5px 0 6px 8px rgba($black,.12),
   4px 0 8px 8px rgba($black,.24)
 ;
-$navigation-drawer-shadow--dark:
-  6px 0 4px 8px rgba($black,.12),
-  5px 0 6px 8px rgba($black,.24),
-  4px 0 8px 8px rgba($black,.48)
-;
 
 $tooltip-shadow:
-  0 2px 4px rgba($black,.24),
-  0 1px 4px 1px rgba($black,.12),
-  0 0 5px rgba($black,.06)
+  0 2px 4px rgba($black,.32),
+  0 1px 4px 1px rgba($black,.16),
+  0 0 5px rgba($black,.08)
 ;
 $tooltip-shadow--dark:
-  0 2px 4px rgba($black,.60),
-  0 1px 4px 1px rgba($black,.30),
-  0 0 5px rgba($black,.15)
+  0 2px 4px rgba($black,.44),
+  0 1px 4px 1px rgba($black,.22),
+  0 0 5px rgba($black,.11)
 ;
 
 $button-shadow:
+  0 1px 3px rgba($black,.16),
+  0 1px 4px rgba($black,.08),
+  0 0 5px rgba($black,.04)
+;
+$button-shadow--dark:
   0 1px 3px rgba($black,.24),
   0 1px 4px rgba($black,.12),
   0 0 5px rgba($black,.06)
 ;
-$button-shadow--light:
-  0 1px 3px rgba($black,.12),
-  0 1px 4px rgba($black,.06),
-  0 0 5px rgba($black,.03)
-;
 
 $card-shadow:
-  0 1px 3px (-1px) rgba($black,.24),
-  0 1px 3px rgba($black,.12),
-  0 0 4px 1px rgba($black,.06)
+  0 1px 3px (-1px) rgba($black,.16),
+  0 1px 3px rgba($black,.08),
+  0 0 4px 1px rgba($black,.04)
 ;
 $card-shadow--dark:
-  0 1px 3px (-1px) rgba($black,.72),
-  0 1px 3px rgba($black,.48),
-  0 0 4px 1px rgba($black,.24)
+  0 1px 3px (-1px) rgba($black,.36),
+  0 1px 3px rgba($black,.18),
+  0 0 4px 1px rgba($black,.09)
 ;
