--- a/src/assets/scss/base/_typography.scss
+++ b/src/assets/scss/base/_typography.scss
@@ -11,21 +11,28 @@ a {
     text-decoration: none;
   }
   .dark-mode & {
-    color: color.scale($red-400, $saturation: 100%, $lightness: 50%);
+    color: color.scale($red-700, $saturation: 100%, $lightness: 40%);
   }
 }
-/*abbr[title] {
+dfn {
+  font-style: normal;
+}
+abbr[title] {
   cursor: help;
   text-decoration: none;
-}*/
+  border-bottom: 1px dashed currentColor;
+  &:hover {
+    border: 0;
+  }
+}
 code {
   @extend %code-font-family;
   padding: 1px 3px;
-  background: $grey-800;
+  background: $grey-1100;
   border-radius: 3px;
   font-size: 80%;
   .dark-mode & {
-    background: $grey-200;
+    background: $grey-500;
   }
 }
 /*q {
@@ -34,29 +41,36 @@ code {
     display: none;
   }
 }*/
-h1, h2, .h2, h3, .h3/*, h4, h5, h6*/ {
+h1, h2, .h2, h3, .h3/* , h4, .h4, h5, h6*/ {
+  @extend %header-font-family;
   position: relative;
   display: block;
   font-weight: 600;
+  color: $grey-250;
+  .dark-mode & {
+    color: $grey-1150;
+  }
 }
 h1 {
-  @extend %header-font-family;
   margin: $h1-margin-rem 0 0 0;
   font-size: $h1-font-rem;
   line-height: $h1-line-rem;
 }
 h2, .h2 {
-  @extend %header-font-family;
   margin: $h2-margin-rem 0 0 0;
   font-size: $h2-font-rem;
   line-height: $h2-line-rem;
+}
+h2.anchor {
+  margin-top: -$nav-height;
+  padding-top: $nav-height + $h2-margin-px;
 }
 h3, .h3 {
   margin: $h3-margin-rem 0 0 0;
   font-size: $h3-font-rem;
   line-height: $h3-line-rem;
 }
-/*h4 {
+/*h4, .h4 {
   margin: $h4-margin-rem 0 0 0;
   font-size: $h4-font-rem;
   line-height: $h4-line-rem;
@@ -106,3 +120,9 @@ li {
 /*table ul, table ol {
   margin: (-$baseline-rem) 0 $baseline-rem 0;
 }*/
+.bold-text {
+  font-weight: 700;
+}
+.italic-text {
+  font-style: italic;
+}
