--- a/src/assets/scss/components/_top-bar.scss
+++ b/src/assets/scss/components/_top-bar.scss
@@ -20,7 +20,7 @@
   box-shadow: $top-bar-shadow;
   z-index: 3;
   .dark-mode & {
-    background: $grey-100;
+    background: $grey-350;
     box-shadow: $top-bar-shadow--dark;
   }
 }
@@ -96,7 +96,7 @@
   height: 20px;
   border: 0;
   border-radius: 10px;
-  background: $grey-600 url-encode('<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 880 400"><path fill="#fff" d="M285,280c-60.75,0-110-49.25-110-110,0-49.17,32.26-90.8,76.77-104.89-8.66-1.71-17.61-2.61-26.77-2.61-75.94,0-137.5,61.56-137.5,137.5s61.56,137.5,137.5,137.5c54.64,0,101.83-31.87,124.01-78.04-18.03,12.93-40.13,20.54-64.01,20.54Z"/><path fill="#ffff80" d="M712.5,200c0,38.66-31.34,70-70,70s-70-31.34-70-70,31.34-70,70-70,70,31.34,70,70Zm-70-162.5l-25,75h50l-25-75Zm0,325l25-75h-50l25,75Zm-162.5-162.5l75,25v-50l-75,25Zm325,0l-75-25v50l75-25Zm-277.4-114.9l35.36,70.71,35.36-35.36-70.71-35.36Zm229.81,229.81l-35.36-70.71-35.36,35.36,70.71,35.36Zm-229.81,0l70.71-35.36-35.36-35.36-35.36,70.71Zm229.81-229.81l-70.71,35.36,35.36,35.36,35.36-70.71Z"/></svg>') 50% 50%/100% 100%;
+  background: $grey-800 url-encode('<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 880 400"><path fill="#fff" d="M285,280c-60.75,0-110-49.25-110-110,0-49.17,32.26-90.8,76.77-104.89-8.66-1.71-17.61-2.61-26.77-2.61-75.94,0-137.5,61.56-137.5,137.5s61.56,137.5,137.5,137.5c54.64,0,101.83-31.87,124.01-78.04-18.03,12.93-40.13,20.54-64.01,20.54Z"/><path fill="#ffff80" d="M712.5,200c0,38.66-31.34,70-70,70s-70-31.34-70-70,31.34-70,70-70,70,31.34,70,70Zm-70-162.5l-25,75h50l-25-75Zm0,325l25-75h-50l25,75Zm-162.5-162.5l75,25v-50l-75,25Zm325,0l-75-25v50l75-25Zm-277.4-114.9l35.36,70.71,35.36-35.36-70.71-35.36Zm229.81,229.81l-35.36-70.71-35.36,35.36,70.71,35.36Zm-229.81,0l70.71-35.36-35.36-35.36-35.36,70.71Zm229.81-229.81l-70.71,35.36,35.36,35.36,35.36-70.71Z"/></svg>') 50% 50%/100% 100%;
   &:after {
     content: '';
     position: absolute;
@@ -114,7 +114,10 @@
     left: 35px;
   }
   .dark-mode & {
-    background-color: $grey-300;
+    background-color: $grey-700;
+    &:after {
+      background: $grey-1200;
+    }
   }
 }
 .main-nav-button {
@@ -126,10 +129,10 @@
   //border: 1px solid $grey-700;
   border-radius: 50%;
   background: transparent;
-  color: $grey-100;
+  color: $grey-400;
   //box-shadow: $button-shadow;
   &:active {
-    background: $grey-900;
+    background: $grey-1200;
   }
   div {
     position: absolute;
@@ -173,9 +176,9 @@
     }
   }
   .dark-mode & {
-    color: $white;
+    color: $grey-1200;
     &:active {
-      background: $grey-200;
+      background: $grey-300;
     }
   }
 }
