--- a/src/assets/scss/pages/_index.scss
+++ b/src/assets/scss/pages/_index.scss
@@ -2,14 +2,17 @@
     Index Page (Homepage)
 \*---------------------------------------------------------------------------*/
 .bot-demo {
-  position: relative;
   margin: $baseline-rem 0;
   video {
+    display: inline-block;
     border-radius: 8px;
+    width: 100%;
+    max-width: 687px;
+    max-height: 543px;
+    vertical-align: top;
+    box-shadow: $card-shadow;
+    .dark-mode & {
+      box-shadow: $card-shadow--dark;
+    }
   }
 }
-/*.bot-demo-border {
-  position: absolute;
-  top: 0;
-  left: 0;
-}*/
